--- a/TravelCost_优化版.ipynb
+++ b/TravelCost_优化版.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c9c9c9c9",
    "metadata": {},
    "outputs": [],
@@ -16,16 +16,41 @@
     "\n",
     "# 定义百度地图 AK 列表\n",
     "ak_list = [\n",
-    "'6ifeCMNS5x6HsLjCtXzXwAVNBWQve4cO'\n",
+    "'87QdwKOjoNYpMgIT7SO1GJgGBv2esAzF'\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f6f1ac28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'OID'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\lfq\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'OID'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 350\u001b[39m\n\u001b[32m    347\u001b[39m path = \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mD:\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m新建文件夹\u001b[39m\u001b[33m\\\u001b[39m\u001b[33m工作簿1.csv\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# 或 'Part9.csv'\u001b[39;00m\n\u001b[32m    349\u001b[39m \u001b[38;5;66;03m# 执行主程序\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m350\u001b[39m result_df = \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 329\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m    327\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmain\u001b[39m(path):\n\u001b[32m    328\u001b[39m     \u001b[38;5;66;03m# 处理CSV文件\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m329\u001b[39m     results = \u001b[43mprocess_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    331\u001b[39m     \u001b[38;5;66;03m# 将结果转化为 DataFrame 格式，并保存到 CSV 文件中\u001b[39;00m\n\u001b[32m    332\u001b[39m     result_df = pd.DataFrame(results)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 296\u001b[39m, in \u001b[36mprocess_csv\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m    294\u001b[39m \u001b[38;5;66;03m# 提交任务\u001b[39;00m\n\u001b[32m    295\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m index, row \u001b[38;5;129;01min\u001b[39;00m df.iterrows():\n\u001b[32m--> \u001b[39m\u001b[32m296\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mOID\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m processed_oids:\n\u001b[32m    297\u001b[39m         future = executor.submit(route_planning, row)\n\u001b[32m    298\u001b[39m         future_list.append(future)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\lfq\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\series.py:1130\u001b[39m, in \u001b[36mSeries.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   1127\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[key]\n\u001b[32m   1129\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[32m-> \u001b[39m\u001b[32m1130\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1132\u001b[39m \u001b[38;5;66;03m# Convert generator to list before going through hashable part\u001b[39;00m\n\u001b[32m   1133\u001b[39m \u001b[38;5;66;03m# (We will iterate through the generator there to check for slices)\u001b[39;00m\n\u001b[32m   1134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\lfq\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\series.py:1246\u001b[39m, in \u001b[36mSeries._get_value\u001b[39m\u001b[34m(self, label, takeable)\u001b[39m\n\u001b[32m   1243\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[label]\n\u001b[32m   1245\u001b[39m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1246\u001b[39m loc = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1248\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[32m   1249\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[loc]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\lfq\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'OID'"
+     ]
+    }
+   ],
    "source": [
     "# 初始化结果列表\n",
     "results = []\n",
@@ -42,15 +67,15 @@
     "    D_Lon = row['D_Lon']\n",
     "    \n",
     "    # 构建起点和终点字符串\n",
-    "    origin = str(O_Lat) + ',' + str(O_Lon)\n",
-    "    destination = str(D_Lat) + ',' + str(D_Lon)\n",
+    "    Origin = str(O_Lat) + ',' + str(O_Lon)\n",
+    "    Destination = str(D_Lat) + ',' + str(D_Lon)\n",
     "    \n",
     "    # 获取 OID 和 DID\n",
-    "    OID = row['origin']\n",
-    "    DID = row['destination']\n",
+    "    OID = row['OID']\n",
+    "    DID = row['DID']\n",
     "\n",
     "    # 发送请求到百度路径规划 API\n",
-    "    target = f\"https://api.map.baidu.com/directionlite/v1/{transport_mode}?origin={origin}&destination={destination}&coord_type=wgs84&ak={current_ak}\"\n",
+    "    target = f\"https://api.map.baidu.com/directionlite/v2/{transport_mode}?origin={Origin}&destination={Destination}&coord_type=wgs84&ak={current_ak}\"\n",
     "    try:\n",
     "        req = requests.get(url=target, timeout=10)  # 增加10秒超时\n",
     "        response = req.json()\n",
@@ -322,7 +347,7 @@
     "        \n",
     "        # 提交任务\n",
     "        for index, row in df.iterrows():\n",
-    "            if row['origin'] not in processed_oids:\n",
+    "            if row['OID'] not in processed_oids:\n",
     "                future = executor.submit(route_planning, row)\n",
     "                future_list.append(future)\n",
     "        \n",
@@ -373,7 +398,7 @@
     "\n",
     "# 示例使用\n",
     "# 替换为你的CSV文件路径\n",
-    "path = 'Part9.csv'  # 或 'Part9.csv'\n",
+    "path = r\"D:\\新建文件夹\\工作簿1.csv\"  # 或 'Part9.csv'\n",
     "\n",
     "# 执行主程序\n",
     "result_df = main(path)\n"
