--- a/arcpy使用.ipynb
+++ b/arcpy使用.ipynb
@@ -531,23 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "b4fdc46a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ExecuteError",
-     "evalue": "ERROR 999999: 异常错误导致工具失败。 请联系 Esri 技术支持 (http://esriurl.com/support) 以报告漏洞，并参阅错误帮助以获取潜在解决方案或解决方法。\nExpected to find comma, colon or start of array; state : startOfObject; buffer : {CEC29119-CACC-4562-8169-C38F807B3344}277482788.cr\n执行(ZonalStatisticsAsTable)失败。\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mExecuteError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     output_table \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(output_folder, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39msplitext(raster)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.dbf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;66;03m# 执行分区统计\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m     arcpy\u001b[38;5;241m.\u001b[39msa\u001b[38;5;241m.\u001b[39mZonalStatisticsAsTable(zone_shapefile,  \u001b[38;5;66;03m# 分区面数据\u001b[39;00m\n\u001b[0;32m     26\u001b[0m                                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrid_id\u001b[39m\u001b[38;5;124m\"\u001b[39m,      \u001b[38;5;66;03m# 分区字段\u001b[39;00m\n\u001b[0;32m     27\u001b[0m                                     raster,          \u001b[38;5;66;03m# 输入栅格数据\u001b[39;00m\n\u001b[0;32m     28\u001b[0m                                     output_table,    \u001b[38;5;66;03m# 输出表格路径\u001b[39;00m\n\u001b[0;32m     29\u001b[0m                                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNODATA\u001b[39m\u001b[38;5;124m\"\u001b[39m,        \u001b[38;5;66;03m# 处理无数据值\u001b[39;00m\n\u001b[0;32m     30\u001b[0m                                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMEAN\u001b[39m\u001b[38;5;124m\"\u001b[39m)           \u001b[38;5;66;03m# 统计类型（ALL表示所有统计量）\u001b[39;00m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m完成栅格：\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mraster\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m，输出表格：\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_table\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m所有分区统计完成！\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mD:\\ArcGIS Pro\\Resources\\ArcPy\\arcpy\\sa\\Functions.py:20646\u001b[0m, in \u001b[0;36mZonalStatisticsAsTable\u001b[1;34m(in_zone_data, zone_field, in_value_raster, out_table, ignore_nodata, statistics_type, process_as_multidimensional, percentile_values, percentile_interpolation_type, circular_calculation, circular_wrap_value, out_join_layer)\u001b[0m\n\u001b[0;32m  20630\u001b[0m     result \u001b[38;5;241m=\u001b[39m arcpy\u001b[38;5;241m.\u001b[39mgp\u001b[38;5;241m.\u001b[39mZonalStatisticsAsTable_sa(\n\u001b[0;32m  20631\u001b[0m         in_zone_data,\n\u001b[0;32m  20632\u001b[0m         zone_field,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m  20642\u001b[0m         out_join_layer,\n\u001b[0;32m  20643\u001b[0m     )\n\u001b[0;32m  20644\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m arcpy\u001b[38;5;241m.\u001b[39mconvertArcObjectToPythonObject(result)\n\u001b[1;32m> 20646\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Wrapper(\n\u001b[0;32m  20647\u001b[0m     in_zone_data,\n\u001b[0;32m  20648\u001b[0m     zone_field,\n\u001b[0;32m  20649\u001b[0m     in_value_raster,\n\u001b[0;32m  20650\u001b[0m     out_table,\n\u001b[0;32m  20651\u001b[0m     ignore_nodata,\n\u001b[0;32m  20652\u001b[0m     statistics_type,\n\u001b[0;32m  20653\u001b[0m     process_as_multidimensional,\n\u001b[0;32m  20654\u001b[0m     percentile_values,\n\u001b[0;32m  20655\u001b[0m     percentile_interpolation_type,\n\u001b[0;32m  20656\u001b[0m     circular_calculation,\n\u001b[0;32m  20657\u001b[0m     circular_wrap_value,\n\u001b[0;32m  20658\u001b[0m     out_join_layer,\n\u001b[0;32m  20659\u001b[0m )\n",
-      "File \u001b[1;32mD:\\ArcGIS Pro\\Resources\\ArcPy\\arcpy\\sa\\Utils.py:45\u001b[0m, in \u001b[0;36mStateSwapper.__call__.<locals>.swapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     42\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 45\u001b[0m     result \u001b[38;5;241m=\u001b[39m wrapper(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;66;03m# Reset the geoprocessor state to the original setting.\u001b[39;00m\n\u001b[0;32m     48\u001b[0m     \u001b[38;5;66;03m# Whatever the result of calling the wrapper function, this\u001b[39;00m\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;66;03m# code will run.\u001b[39;00m\n\u001b[0;32m     50\u001b[0m     gp\u001b[38;5;241m.\u001b[39m_gp\u001b[38;5;241m.\u001b[39mAddOutputsToMap \u001b[38;5;241m=\u001b[39m addToResultState\n",
-      "File \u001b[1;32mD:\\ArcGIS Pro\\Resources\\ArcPy\\arcpy\\sa\\Functions.py:20630\u001b[0m, in \u001b[0;36mZonalStatisticsAsTable.<locals>.Wrapper\u001b[1;34m(in_zone_data, zone_field, in_value_raster, out_table, ignore_nodata, statistics_type, process_as_multidimensional, percentile_values, percentile_interpolation_type, circular_calculation, circular_wrap_value, out_join_layer)\u001b[0m\n\u001b[0;32m  20615\u001b[0m \u001b[38;5;129m@Utils\u001b[39m\u001b[38;5;241m.\u001b[39mStateSwapper(Utils\u001b[38;5;241m.\u001b[39mStateSwapper\u001b[38;5;241m.\u001b[39mNoSingleRasterResult)\n\u001b[0;32m  20616\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mWrapper\u001b[39m(\n\u001b[0;32m  20617\u001b[0m     in_zone_data,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m  20628\u001b[0m     out_join_layer,\n\u001b[0;32m  20629\u001b[0m ):\n\u001b[1;32m> 20630\u001b[0m     result \u001b[38;5;241m=\u001b[39m arcpy\u001b[38;5;241m.\u001b[39mgp\u001b[38;5;241m.\u001b[39mZonalStatisticsAsTable_sa(\n\u001b[0;32m  20631\u001b[0m         in_zone_data,\n\u001b[0;32m  20632\u001b[0m         zone_field,\n\u001b[0;32m  20633\u001b[0m         in_value_raster,\n\u001b[0;32m  20634\u001b[0m         out_table,\n\u001b[0;32m  20635\u001b[0m         ignore_nodata,\n\u001b[0;32m  20636\u001b[0m         statistics_type,\n\u001b[0;32m  20637\u001b[0m         process_as_multidimensional,\n\u001b[0;32m  20638\u001b[0m         percentile_values,\n\u001b[0;32m  20639\u001b[0m         percentile_interpolation_type,\n\u001b[0;32m  20640\u001b[0m         circular_calculation,\n\u001b[0;32m  20641\u001b[0m         circular_wrap_value,\n\u001b[0;32m  20642\u001b[0m         out_join_layer,\n\u001b[0;32m  20643\u001b[0m     )\n\u001b[0;32m  20644\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m arcpy\u001b[38;5;241m.\u001b[39mconvertArcObjectToPythonObject(result)\n",
-      "File \u001b[1;32mD:\\ArcGIS Pro\\Resources\\ArcPy\\arcpy\\geoprocessing\\_base.py:532\u001b[0m, in \u001b[0;36mGeoprocessor.__getattr__.<locals>.<lambda>\u001b[1;34m(*args)\u001b[0m\n\u001b[0;32m    530\u001b[0m val \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gp, attr)\n\u001b[0;32m    531\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcallable\u001b[39m(val):\n\u001b[1;32m--> 532\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39margs: val(\u001b[38;5;241m*\u001b[39mgp_fixargs(args, \u001b[38;5;28;01mTrue\u001b[39;00m))\n\u001b[0;32m    533\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    534\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m convertArcObjectToPythonObject(val)\n",
-      "\u001b[1;31mExecuteError\u001b[0m: ERROR 999999: 异常错误导致工具失败。 请联系 Esri 技术支持 (http://esriurl.com/support) 以报告漏洞，并参阅错误帮助以获取潜在解决方案或解决方法。\nExpected to find comma, colon or start of array; state : startOfObject; buffer : {CEC29119-CACC-4562-8169-C38F807B3344}277482788.cr\n执行(ZonalStatisticsAsTable)失败。\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "完成栅格：FVC_2000.tif，输出表格：D:\\新建文件夹\\2000统计有\\FVC_2000.dbf\n",
+      "所有分区统计完成！\n"
      ]
     }
    ],
@@ -556,7 +549,7 @@
     "import os\n",
     "\n",
     "# 设置工作环境\n",
-    "arcpy.env.workspace = r\"D:\\新建文件夹\\2000\"  # 数据文件夹路径\n",
+    "arcpy.env.workspace = r\"D:\\新建文件夹\\新建文件夹\"  # 数据文件夹路径\n",
     "output_folder = r\"D:\\新建文件夹\\2000统计有\"  # 输出表格文件夹路径\n",
     "\n",
     "# 允许覆盖输出文件\n",
@@ -568,7 +561,7 @@
     "\n",
     "# 获取所有的栅格数据和分区数据\n",
     "raster_list = arcpy.ListRasters(\"*.tif\", \"TIF\")  # 根据需要设置文件格式和名称模式\n",
-    "zone_shapefile = r\"D:\\新建文件夹\\渔网投影\\fishnet_lin.shp\"  # 分区面数据路径\n",
+    "zone_shapefile = r\"D:\\新建文件夹\\渔网\\FishNet.shp\"  # 分区面数据路径\n",
     "\n",
     "# 遍历每个栅格数据，进行分区统计\n",
     "for raster in raster_list:\n",
@@ -577,10 +570,10 @@
     "    \n",
     "    # 执行分区统计\n",
     "    arcpy.sa.ZonalStatisticsAsTable(zone_shapefile,  # 分区面数据\n",
-    "                                    \"grid_id\",      # 分区字段\n",
+    "                                    \"FID\",      # 分区字段\n",
     "                                    raster,          # 输入栅格数据\n",
     "                                    output_table,    # 输出表格路径\n",
-    "                                    \"NODATA\",        # 处理无数据值\n",
+    "                                    \"DATA\",        # 处理无数据值\n",
     "                                    \"MEAN\")           # 统计类型（ALL表示所有统计量）\n",
     "       \n",
     "    print(f\"完成栅格：{raster}，输出表格：{output_table}\")\n",
@@ -815,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
